previewer: handle opening files from URI

https://bugzilla.gnome.org/show_bug.cgi?id=766531